4.2-0
- Fixed bug in ezANOVA whereby the incorrect results are returned when performing a mixed-factor analysis with unbalanced groups and requesting type-III sums of squares.
- Fixed bugs in ezCor preventing operation of the label_alpha and label_color arguments

4.1-1
- Fixed bug in ezPlot2 when x is continuous
- Fixed bug in ezMixed when specifying non-gaussian family

4.1-0
- Added ability to use bam instead of gam via argument to ezMixed
- Changed author email address
- Fixed bug in ezMixed when family=gaussian (default)
- Fixed bug in ezMixed use of gam_args and mer_args

4.0-2
- updated .Rbuildignore to ignore .gitignore
- reduced time it takes to check examples by encapsulating unnecessary examples in \dontrun{}
- fixed bug in ezANOVA/ezStats/ezPlot code that attempts to automatically fix situations when there are repeated wid levels across levels of between variables 

4.0-1
- All functions
-    Previously, ez used the .() function to permit referral to column names without having to use quotes or the my_data$my_column format. One still needs to use .() when supplying multiple column names, but in cases where an argument is being supplied with a single column name, you no longer even have to type .(); you can simply type the column name.
- ezANOVA
-    Added ability to specify covariates (applies to ezPlot and ezStats too)
-    Added "within_full" argument to implement proper automatic collapsing of cell means when values supplied to "within" represent a subset of the full design. (applies to ezPlot and ezStats too)
-    Fixed bug preventing use of returned aov object with stats::TukeyHSD()
-    Fixed bug that caused ezANOVA to return type-2 SS results even when type-3 SS results were requested
-    Fixed bug causing error when design is completely between-Ss and unbalanced (applies to ezPlot and ezStats too)